[package]
name = "module-evm"
version = "0.7.3"
authors = ["Reef Developers"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
impl-trait-for-tuples = "0.1"
primitive-types = { version = "0.10", default-features = false, features = ["rlp", "byteorder"] }
ripemd160 = { version = "0.9", default-features = false }
rlp = { version = "0.5", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sha3 = { version = "0.8", default-features = false }
tiny-keccak = { version = "2.0", features = ["fips202"] }
log = { version = "0.4.14", default-features = false }

evm = { version = "0.30.1", default-features = false, features = ["with-codec"] }
evm-gasometer = { version = "0.30.0", default-features = false }
evm-runtime = { version = "0.30.0", default-features = false, features = ["tracing"]}

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }

sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
orml-traits = { path = "../../orml/traits", default-features = false }

support = { package = "module-support", path = "../support", default-features = false }
primitives = { package = "reef-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
env_logger = "0.7"
orml-currencies = { path = "../../orml/currencies" }
orml-tokens = { path = "../../orml/tokens" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"sp-io/std",
	"sp-std/std",
	"sha3/std",
	"rlp/std",
	"primitive-types/std",
	"evm/std",
	"evm/with-serde",
	"evm-runtime/std",
	"evm-gasometer/std",
	"pallet-timestamp/std",
	"ripemd160/std",
	"primitives/std",
	"orml-traits/std",
	"support/std",
	"log/std"
]
with-ethereum-compatibility = []
