[package]
name = "module-poc"
version = "0.1.0"
authors = ["Reef Developers"]
description = "Proof of Commitment module"
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }

primitives = { package = "reef-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
pallet-balances = "3.0.0"
sp-core = "3.0.0"
sp-io = "3.0.0"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"primitives/std",
]
