[package]
name = "module-poc"
version = "0.1.0"
authors = ["Reef Developers"]
description = "Proof of Commitment module"
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , tag = "monthly-2022-09" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , tag = "monthly-2022-09" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , tag = "monthly-2022-09" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , tag = "monthly-2022-09" }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false , tag = "monthly-2022-09" , optional = true }

pallet-collective = { git = "https://github.com/paritytech/substrate", default-features = false , tag = "monthly-2022-09" }

primitives = { package = "reef-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
sp-core = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
sp-io = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",

	"pallet-collective/std",
	"primitives/std",

	"frame-benchmarking/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",

	"pallet-collective/runtime-benchmarks",
]
