[package]
name = "module-support"
version = "0.7.3"
authors = ["Reef Developers"]
edition = "2018"

[dependencies]
impl-trait-for-tuples = "0.2.1"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.9" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.9" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.9" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.9" }
ethereum-types = { version = "0.12.0", default-features = false }
orml-traits = { path = "../../orml/traits", default-features = false }
primitives = { package = "reef-primitives", path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-runtime/std",
	"sp-core/std",
	"frame-support/std",
	"sp-std/std",
	"primitives/std",
	"orml-traits/std",
]
