[package]
name = "module-support"
version = "0.7.3"
authors = ["Reef Developers"]
edition = "2018"

[dependencies]
impl-trait-for-tuples = "0.2.1"
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , tag = "monthly-2022-09" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , tag = "monthly-2022-09" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , tag = "monthly-2022-09" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , tag = "monthly-2022-09" }
ethereum-types = { version = "0.13.1", default-features = false }
orml-traits = { path = "../../orml/traits", default-features = false }
primitives = { package = "reef-primitives", path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-runtime/std",
	"sp-core/std",
	"frame-support/std",
	"sp-std/std",
	"primitives/std",
	"orml-traits/std",
]
