[package]
name = "runtime-common"
version = "0.7.3"
authors = ["Reef Developers"]
edition = "2018"

[dependencies]
static_assertions = "1.1.0"
serde = { version = "1.0.101", optional = true, default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.9" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.9" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.9" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.9" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.9" }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.9" }
log = { version = "0.4.14", default-features = false }

module-evm = { path = "../../modules/evm", default-features = false }

orml-traits = { path = "../../orml/traits", default-features = false }

module-support = { path = "../../modules/support", default-features = false }
module-transaction-payment = { path = "../../modules/transaction_payment", default-features = false }
primitives = { package = "reef-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
serde_json = "1.0.41"
hex-literal = "0.3.1"
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.9" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.9" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.9" }
pallet-proxy = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.9" }
pallet-utility = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.9" }
orml-tokens = { path = "../../orml/tokens", default-features = false }
module-currencies = { path = "../../modules/currencies" }
module-evm-bridge = { path = "../../modules/evm-bridge" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-scheduler/std",
	"module-evm/std",
	"orml-traits/std",
	"module-support/std",
	"primitives/std",
	"module-transaction-payment/std",
]
with-ethereum-compatibility = []
