[package]
name = "evm-rpc"
version = "0.1.0"
authors = ["Reef Developers"]
edition = "2018"

[dependencies]
jsonrpc-core = "15.0.0"
jsonrpc-derive = "15.0.0"
ethereum-types = "0.12.0"
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
rustc-hex = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
module-evm-rpc-runtime-api = { path = "runtime_api" }
module-evm = { path = ".." }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
log = { version = "0.4.14", default-features = false }

[dev-dependencies]
serde_json = "1.0.41"

[features]
default = [ "rpc_binary_search_estimate" ]
rpc_binary_search_estimate = []
