[package]
name = "module-evm-rpc-runtime-api"
version = "0.1.0"
authors = ["Reef Developers"]
edition = "2018"

[dependencies]
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.9" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.9" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.9" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.9" }
ethereum-types = { version = "0.12.0", default-features = false }
primitives = { package = "reef-primitives", path = "../../../../primitives", default-features = false }

[features]
default = ["std"]
std = [
	"sp-runtime/std",
	"sp-api/std",
	"sp-std/std",
	"sp-core/std",
	"ethereum-types/std",
	"primitives/std",
]
